environments/development/mw-headless-browser/default-headers.yml
apiVersion: traefik.io/v1alpha1
kind: Middleware
metadata:
  name: headless-header
  namespace: services
spec:
  headers:
    browserXssFilter: true
    contentTypeNosniff: true
    forceSTSHeader: true
    stsIncludeSubdomains: true
    stsPreload: true
    stsSeconds: 15552000
    customFrameOptionsValue: SAMEORIGIN
    customRequestHeaders:
      X-Forwarded-Proto: https
