environments/development/mw-headless-browser/patch-deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: mw-service-headless
  namespace: mw-services
spec:
  template:
    spec:
      containers:
        - name: mw-service-headless
          image: gitlab.mindworking.local:5050/mw-development/mw-service-headless-browser/mw-service-headless-browser:1.1.0-ci0066-b95ed82
          resources:
            limits:
              cpu: "2"
              memory: 1Gi
            requests:
              cpu: 500m
              memory: 1Gi
