environments/development/mw-headless-browser/http_route.yml
---
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: mw-service-headless-http
  namespace: mw-services
spec:
  parentRefs:
  - name: traefik
    sectionName: http
    namespace: kube-system
    kind: Gateway
  hostnames:
  - mw-service-headless-k8s.dev.mindworking.local
  rules:
    - filters:
        - type: RequestRedirect
          requestRedirect:
            scheme: https
            statusCode: 301

---
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: mw-service-headless-https
  namespace: mw-services
  labels:
    gateway: traefik
spec:
  parentRefs:
  - name: traefik
    sectionName: https
    namespace: kube-system
    kind: Gateway
  hostnames:
  - mw-service-headless-k8s.dev.mindworking.local
  rules:
  - matches:
    - path:
        type: PathPrefix
        value: /
    backendRefs:
    - name: mw-service-headless
      namespace: mw-services
      port: 8080  
    filters: 
    - type: ExtensionRef
      extensionRef:
        group: traefik.io
        kind: Middleware
        name: mw-headless-header
